# sunlo-nextjs

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .vercelignore  README.md  codegen.ts  components.json  eslint.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sunlo.code-workspace  tailwind.config.js  tsconfig.json
.husky/: pre-commit
app/: Footer.js  Footer.jsx  Provider.js  fetchers.js  head.js  layout.js  layout.jsx  loading.js  page.jsx  query-client.js  query-provider.jsx
app/(app)/: Navbar.jsx  QueryProvider.js  layout.js  layout.jsx  (+3 more)
components/: AddNewCardToDeck.js  AppLayout.js  AppLayout.tsx  AppProfileLayout.js  Banner.js  BannerLayout.js  DevData.js  ErrorList.js  ErrorList.jsx  ErrorList.tsx  ForgotPasswordForm.js  Garlic.js  Layout.js  LoginForm.js  PhraseCardSmall.js  PhraseCardSmall.tsx  PhraseLink.js  SetNewEmailForm.js  SetNewPasswordForm.js  ShowPhrase.js  Sidebar.js  SignupForm.js  SiteLayout.js  SiteLayout.tsx
lib/: auth-client.js  auth-context.js  auth-provider.js  data-helpers.js  deck.js  global-store.js  helpers.js  language.js  languages.js  make-language-codes.js  menus.js  phrase.js  profile-deck-provider.js  providers.js  supabase-client.js  use-data.js
pages/: _app.js  forgot-password.js  index.js  index.tsx  login.js  set-new-password.js  signup.js
public/: graphiql.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
styles/: globals.css
supabase/: config.toml  views.sql
types/: client-types.ts  phrase.ts  supabase.ts
(+331 files in other folders)
