[package]
name = "sunlo"
version = "0.3.0"
description = "The Social Language Learning App"
authors = ["@michaelsnook"]
license = "MIT"
repository = "https://github.com/michaelsnook/sunlo.git"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = [] }
tauri-plugin-cli = "2.0.0-beta.6"
